@@ -174,7 +174,7 @@ typedef struct
     bool (*canAssign) (const char *op1, const char *op2, const char *op3);
     bool (*notUsedFrom) (const char *reg, const char *label, lineNode *head);
     bool (*symmParmStack) (void);
-    bool (*canJoinRegs) (set *regs, char dst[20]);
+    bool (*canJoinRegs) (const char **regs, char dst[20]);
   }
   peep;
 
